SERVER-25131: release collection/db locks on collection clone failure.