src/mongo/db/repl/task_runner.cpp
@@ -227,9 +227,7 @@ Status TaskRunner::runSynchronousTask(SynchronousTask func, TaskRunner::NextActi
         } else {
             // Run supplied function.
             try {
-                log() << "starting to run synchronous task on runner.";
                 returnStatus = func(txn);
-                log() << "done running the synchronous task.";
             } catch (...) {
                 returnStatus = exceptionToStatus();
                 error() << "Exception thrown in runSynchronousTask: " << redact(returnStatus);
